Implementando consulta por telefone em "Outro Contato"